WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301442
[visionOS] We do not need to teardown the inline layer when going into docking mode
https://bugs.webkit.org/show_bug.cgi?id=301442
Summary
[visionOS] We do not need to teardown the inline layer when going into dockin...
Jean-Yves Avenard [:jya]
Reported
2025-10-24 13:27:35 PDT
In
bug 301397
we added a timer to determine when the AVSampleBufferVideoRenderer should be removed and we have logic to handle delayed removal of the inline layer. However, we do not need to delete the layer, it will be re-used as soon as we exit docking. Additionally, destroying/recreating the layer whenever we enter and exit docking mode is an unnecessary task that only complicates the logic flow of the AudioVideoRendererAVFObjC
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-24 13:27:40 PDT
<
rdar://problem/163362289
>
Jean-Yves Avenard [:jya]
Comment 2
2025-10-24 14:28:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52972
EWS
Comment 3
2025-10-25 20:19:53 PDT
Committed
302155@main
(a538d16e6078): <
https://commits.webkit.org/302155@main
> Reviewed commits have been landed. Closing PR #52972 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug